syntax = "proto3";

package tutorial;

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";

option java_package = "fr.pierrezemb.recordstore.proto";
option java_outer_classname = "RecordStoreProtocol";

message CreateSchemaRequest {
  string name = 1;
  string primary_key_field = 2;
  SelfDescribedMessage schema = 3;
  repeated indexDefinition index_definitions = 4;
}

message CreateSchemaResponse {
  Result result = 1;
}

enum Result {
  OK = 0;
  KO = 1;
}

service SchemaService {
  rpc Create (CreateSchemaRequest) returns (CreateSchemaResponse);
}

service RecordService {
  rpc Put (PutRecordRequest) returns (CreateSchemaResponse);
  rpc Count (CountRecordRequest) returns (CountRecordResponse);
}

message CountRecordRequest {
  string table = 1;
}

message CountRecordResponse {
  Result result = 1;
  int64 size = 2;
}

message PutRecordRequest {
  string table = 1;
  bytes message = 2;
}

message indexDefinition {
  string field = 1;
  IndexType index_type = 2;
}

enum IndexType {
  VALUE = 0;
}

message SelfDescribedMessage {
  // Set of FileDescriptorProtos which describe the type and its dependencies.
  google.protobuf.FileDescriptorSet descriptor_set = 1;
}
